ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Broadcaster_Recurring_Schedule__c/CnP_PaaS__Broadcaster_Recurring_Schedule__c.object-meta.xml
<CustomObject>
    <label>C&amp;P Broadcaster Recurring Schedule</label>
    <nameField>
        <label>Broadcaster Recurring Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>C&amp;P Broadcaster Recurring Schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>