ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Broadcaster_Recurring_Schedule__c/fields/CnP_PaaS__Broadcaster_Schedule_Process__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Broadcaster_Schedule_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broadcaster Schedule Process</label>
    <referenceTo>CnP_PaaS__Broadcaster_Schedule_Process__c</referenceTo>
    <relationshipName>Broadcaster_Recurring_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>