ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Broadcaster_Recurring_Schedule__c/fields/CnP_PaaS__End_on__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__End_on__c</fullName>
    <label>End on</label>
    <length>20</length>
    <type>Text</type>
</CustomField>