ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Broadcaster_Recurring_Schedule__c/fields/CnP_PaaS__Repeats_Every__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Repeats_Every__c</fullName>
    <label>Repeats Every</label>
    <length>255</length>
    <type>Text</type>
</CustomField>