ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Broadcaster_Recurring_Schedule__c/fields/CnP_PaaS__Scheduledate__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Scheduledate__c</fullName>
    <label>Scheduledate</label>
    <type>Date</type>
</CustomField>